@@ -2,6 +2,8 @@ Revision history for DBIx::Class
 
         - added remove_column(s) to ResultSource/ResultSourceProxy
         - added add_column alias to ResultSourceProxy
+        - added source_name to ResultSource
+	- load_classes now uses source_name and sets it if necessary
 
 0.06001
         - Added fix for quoting with single table
